main.css
* {
    box-sizing: border-box;
    text-align: center;
}


::-moz-selection {
    background-color: #427b58;
    color: #ebdbb2;
}


::selection{
    background-color: #427b58;
    color: #ebdbb2;
}


body {
    background-color: #282828;
    color: #3c3836;
    font-family: 'Cantarell';
    font-size: 20px;
    margin: 0;
}


h1 {
    font-family: 'Ubuntu';
    font-weight: bold;
}


h2 {
    font-weight: bold;
    font-family: 'Ubuntu';
}


p {
    margin-top: 0;
    margin-bottom: 0;
}

p.red {
    color: #cc241d;
    font-weight: bold;
}


a {
    color: #458588;
}

a:hover {
    background-color: #076678;
    color: #ebdbb2;
}

a.nohover {
    color: #d5c4a1;
}

a.nohover:hover {
    background-color: unset;
    color: unset;
}


pre {
    font-family: 'Cantarell';
    color: #3c3836;
}


img {
    display: block;
    align-self: center;
    margin: auto;
}

img.icon {
    height: 64px;
    display: inline-block;
    color: #3c3836;
    margin: 10px;
}



/* 
BUTTONS
*/

button {
    border: none;
    font-size: 24px;
    font-family: 'Noto Sans';
    text-align: center;
    padding: 10px;
    margin: 5px;
    color: #ebdbb2;
}

button.bold {
    font-weight: bold;
}


button.blue {
    background-color: #458588;
}

button.blue:hover {
    background-color: #076678;
}

button.blue:active {
    background-color: #83a598;
}


button.green {
    background-color: rgb(40, 220, 40);
}

button.green:hover {
    background-color:rgb(40, 200, 40);
}

button.green:active {
    background-color: rgb(25, 150, 25);
}


button.collapsible {
    width: 100%;
    z-index: 20;
    display: flex;
    align-items: center;
    margin: auto;
    background-color: #00000000;
    background-image: linear-gradient(to bottom, #00000000, #282828A6);
    color: #ebdbb2;
    font-family: "Fira Code";
    font-size: 20px;
    font-weight: bold;
}

button.collapsible:hover {
    background-color: #282828A6;
    background-image: none;
}

button.collapsible p.left {
    text-align: left;
}

button.collapsible p.right {
    text-align: right;
}



/*
INPUTS
*/

input {
    font-family: 'Noto Sans';
}

input.borderless {
    border: none;
}



/*
DIVIDERS
*/

div {
    width: 85%;
    padding-top: 40px;
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 40px;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    
    background-color: #ebdbb2;
}


div.h {
    width: 100%;
    padding: 1px;
    margin: 0;
    margin-top: 20px;
    margin-bottom: 20px;
    background-color: #98971a;
    color: #ebdbb2;
}

div.h h1 {
    margin-top: 10px;
    margin-bottom: 10px;
}


div.faded {
    width: 100%;
    background-color: #d5c4a1;
    display: flex;
    align-items: center;
}


div.content {
    max-height: 0;
    width: 100%;
    z-index: 40;
    background-color: #00000000;
    background-image: linear-gradient(to bottom, #282828A6, #282828FF);
    overflow: hidden;
    font-size: 18px;
    padding: 0;
    margin: auto;
    transition: max-height 0.2s ease-out;
}

div.content p {
    margin-top: 12px;
    margin-bottom: 12px;
    color: #ebdbb2;
}

div.content #icon {
    filter: invert(88%) sepia(32%) saturate(257%) hue-rotate(355deg) brightness(96%) contrast(92%);
}


div.links {
    width: max-content;
    display: flex;
    background-color: #00000000;
    padding: 0;
    vertical-align: middle;
}


#icon {
    height: 32px;
    width: 32px;
    margin: 8px;
    align-self: center;
}


#text {
    font-size: 18px;
    align-self: right;
    margin-top: 12px;
    margin-bottom: 12px;
    margin-left: auto;
    margin-right: auto;
}


div.end {
    clear: both;
    padding: 0;
    margin: auto;
}


div.imgbg {
    width: 100%;
    z-index: 10;
    background-color: #d5c4a1;
    background-size: cover;
    padding: 0;
}



/*
MEDIA
*/
@media (max-width: 800px) {
    div.faded {
        flex-direction: column;
    }

    img {
        height: 24px;
    }
}

